fixi the profile img - it was stretched

--- a/src/app/modules/elements/card/Card.component.css
+++ b/src/app/modules/elements/card/Card.component.css
@@ -57,8 +57,7 @@
     width: 30px;
     height: 30px;
     float:left;
-    padding-left: 10px;
-    padding-right: 5px;
+    padding: 5px;
 
 }
 .userUserName
